--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
       POSTGRES_DB: mydatabase
-      
+
   api:
     build: .
     ports:
@@ -20,7 +20,7 @@ services:
     container_name: "api"
     restart: always
     environment:
-      DATABASE_URL: "postgresql://root:root@db-postgres-ponto:5432/mydatabase"
+      DATABASE_URL: "postgresql://root:root@localhost:5435/mydatabase"
     depends_on:
       - db-postgres-ponto
 
