--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       POSTGRES_USER: root
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: timeAttendance
 
   api:
     build: .
@@ -20,7 +20,7 @@ services:
     container_name: "api"
     restart: always
     environment:
-      DATABASE_URL: "postgresql://root:root@localhost:5435/mydatabase"
+      DATABASE_URL: postgresql://root:root@db-postgres-ponto:5432/timeAttendance?schema=public
     depends_on:
       - db-postgres-ponto
 
